--- a/index.html
+++ b/index.html
@@ -62,6 +62,28 @@
     html.light-theme .cat-toggle::after {
       background: white;
     }
+
+    /* Mobile improvements */
+    @media (max-width: 500px) {
+      .cat-toggle, .theme-toggle, .settings-toggle {
+        width: 2.4rem;
+        height: 2.4rem;
+        margin-left: 0.9rem;
+      }
+
+      .cat-toggle::after, .theme-toggle::after {
+        width: 12px;
+        height: 12px;
+      }
+
+      .settings-toggle i {
+        font-size: 1.3rem;
+      }
+
+      .header-controls {
+        gap: 12px;
+      }
+    }
   </style>
 </head>
 <body>
@@ -310,6 +332,26 @@
       #addFixedExpenseBtn {
         width: 100%;
       }
+
+      /* Add expense button improvements */
+      .add-expense-btn {
+        min-height: 48px;
+        font-size: 1rem;
+      }
+
+      /* Improved spacing for add expense card */
+      .add-expense-card {
+        gap: 14px;
+      }
+
+      .add-expense-row {
+        margin-bottom: 5px;
+      }
+
+      /* Icon emoji size adjustment */
+      .icon-emoji {
+        font-size: 18px;
+      }
     }
     
     /* Support for very small screens */
@@ -329,6 +371,15 @@
       
       canvas {
         max-width: 100%;
+      }
+
+      /* Even more generous touch targets */
+      .add-expense-btn {
+        min-height: 52px;
+      }
+
+      .icon-emoji {
+        font-size: 20px;
       }
     }
   </style>
