תיקון עיגולים והגלילה בדף

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
   <div id="loader" class="loader"></div>
   <header>
     <span class="header-icon"><i class="fas fa-chart-pie"></i></span>
-    <h1>ניהול תקציב</h1>
+    <h1>ניהול1 תקציב</h1>
     <div class="header-controls">
       <a href="categories.html" class="cat-toggle" title="גרפי קטגוריות"></a>
       <button id="themeToggle" class="theme-toggle" title="מעבר מצב"></button>
