--- a/index.html
+++ b/index.html
@@ -51,19 +51,15 @@
     }
     
     /* Make buttons perfect circles */
-    .cat-toggle, .theme-toggle, .settings-toggle {
+    .cat-toggle, .settings-toggle {
       width: 44px; 
       height: 44px; 
       border-radius: 50%; 
       margin: 0 0 0 10px;
       padding: 0;
-      overflow: hidden;
+      overflow: visible;
       box-sizing: border-box;
-      display: flex;
-      align-items: center; 
-      justify-content: center;
-      flex-shrink: 0;
-      -webkit-tap-highlight-color: transparent;
+      position: relative;
     }
 
     .cat-toggle {
@@ -72,11 +68,15 @@
 
     .cat-toggle::after {
       content: "";
-      display: inline-block;
+      display: block;
       width: 12px;
       height: 12px;
       border-radius: 50%;
       background: white;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
     }
 
     .settings-toggle {
@@ -86,6 +86,13 @@
     .settings-toggle i {
       color: #fff;
       font-size: 1.3rem;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      display: flex;
+      align-items: center;
+      justify-content: center;
     }
     
     .status-budget {
