תיקון עיגולים והגלילה בדף

--- a/categories.html
+++ b/categories.html
@@ -894,11 +894,13 @@
 <body>
   <div id="loader" class="loader"></div>
   <header>
-    <span class="header-icon"><i class="fas fa-chart-pie"></i></span>
-    <h1>גרפי קטגוריות</h1>
-    <div class="header-controls">
-      <a href="index.html" class="cat-toggle" title="חזרה לניהול תקציב"></a>
-      <button id="budgetSettingsBtn" class="settings-toggle" title="הגדרות תקציב" onclick="toggleBudgetPanel()"><i class="fas fa-gear"></i></button>
+    <div class="header-layout">
+      <span class="header-icon"><i class="fas fa-chart-pie"></i></span>
+      <h1>גרפי קטגוריות</h1>
+      <div class="header-controls">
+        <a href="index.html" class="cat-toggle" title="חזרה לניהול תקציב"></a>
+        <button id="budgetSettingsBtn" class="settings-toggle" title="הגדרות תקציב" onclick="toggleBudgetPanel()"><i class="fas fa-gear"></i></button>
+      </div>
     </div>
   </header>
   
