--- a/index.html
+++ b/index.html
@@ -214,11 +214,13 @@
 <body>
   <div id="loader" class="loader"></div>
   <header>
-    <span class="header-icon"><i class="fas fa-chart-pie"></i></span>
-    <h1>ניהול תקציב</h1>
-    <div class="header-controls">
-      <a href="categories.html" class="cat-toggle" title="גרפי קטגוריות"></a>
-      <button id="settingsBtn" class="settings-toggle" title="הגדרות" onclick="toggleSettings()"><i class="fas fa-gear"></i></button>
+    <div class="header-layout">
+      <span class="header-icon"><i class="fas fa-chart-pie"></i></span>
+      <h1>ניהול תקציב</h1>
+      <div class="header-controls">
+        <button id="settingsBtn" class="settings-toggle" title="הגדרות" onclick="toggleSettings()"><i class="fas fa-gear"></i></button>
+        <a href="categories.html" class="cat-toggle" title="גרפי קטגוריות"></a>
+      </div>
     </div>
   </header>
   
