תיקון עיגולים והגלילה בדף

--- a/index.html
+++ b/index.html
@@ -230,10 +230,7 @@
   <div id="loader" class="loader"></div>
   <header>
     <div class="header-layout">
-      <div class="header-right">
-        <span class="header-icon"><i class="fas fa-chart-pie"></i></span>
-        <h1>ניהול תקציב</h1>
-      </div>
+      <div class="header-right"></div>
       <div class="header-left">
         <a href="categories.html" class="cat-toggle" title="גרפי קטגוריות"></a>
         <button id="settingsBtn" class="settings-toggle" title="הגדרות" onclick="toggleSettings()"><i class="fas fa-gear"></i></button>
