--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
   <div id="backdrop" class="backdrop" onclick="closeAllPanels()"></div>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script src="utils.js" defer></script>
-  <script src="script.js" defer></script>
+  <script src="index.js" defer></script>
   <footer>© 2026 ניהול תקציב</footer>
   <p style="text-align: center; margin-top: 10px; font-size: 0.8rem; opacity: 0.7;">
     הנתונים נשמרים אוטומטית במכשיר שלך. גם אם תסגור את הדף, המידע יישמר.
